--- a/notebooks/homers-data-processing.ipynb
+++ b/notebooks/homers-data-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEASON, WEEK = 2023, 7"
+    "SEASON, WEEK = 2023, 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,67 +78,67 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>BB</td>\n",
+       "      <td>BAL</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td></td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>PIT</td>\n",
        "      <td>SEA</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>LAR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td></td>\n",
+       "      <td>CAR</td>\n",
        "      <td>CLE</td>\n",
        "      <td>PHI</td>\n",
-       "      <td>LV</td>\n",
-       "      <td>LAC</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>TB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>WAS</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td></td>\n",
+       "      <td>MIA</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>DAL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>BUF</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>ATL</td>\n",
-       "      <td>DET</td>\n",
+       "      <td>DAL</td>\n",
        "      <td>GB</td>\n",
+       "      <td></td>\n",
+       "      <td>KC</td>\n",
+       "      <td>CHI</td>\n",
+       "      <td>CHI</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>DET</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>LAC</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>NO</td>\n",
+       "      <td>HOU</td>\n",
        "      <td>BAL</td>\n",
+       "      <td></td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>NYJ</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Pick Team Hunter Harry Griffin  Ben Chuck\n",
-       "0   BB  SEA    CLE   PHI     DET   GB   LAR\n",
-       "1    1  CLE    PHI    LV     LAC  WAS    TB\n",
-       "2    2  WAS    SEA   WAS     SEA  BUF   WAS\n",
-       "3    3  PHI    BUF   DET     ATL  DET    GB\n",
-       "4    4  DET    WAS   LAC     CLE   NO   BAL"
+       "  Pick  Team Hunter Harry Griffin  Ben Chuck\n",
+       "0   BB   BAL    HOU           ATL  PIT   SEA\n",
+       "1    1   PIT    DAL           CAR  CLE   PHI\n",
+       "2    2   CIN    PIT           MIA  CIN   DAL\n",
+       "3    3   DAL     GB            KC  CHI   CHI\n",
+       "4    4   HOU    BAL           CIN  HOU   NYJ"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(54, 18)\n"
+      "(45, 18)\n"
      ]
     },
     {
@@ -206,106 +206,106 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>final</td>\n",
-       "      <td>SEA</td>\n",
+       "      <td>PIT</td>\n",
        "      <td>2023</td>\n",
-       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "      <td>True</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>2023_07_ARI_SEA</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.5</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2023_08_JAX_PIT</td>\n",
+       "      <td>JAX</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-2.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>hunter</td>\n",
-       "      <td>SEA</td>\n",
+       "      <td>PIT</td>\n",
        "      <td>2023</td>\n",
-       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>2023_07_ARI_SEA</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.5</td>\n",
+       "      <td>2023_08_JAX_PIT</td>\n",
+       "      <td>JAX</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-2.5</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>harry</td>\n",
-       "      <td>SEA</td>\n",
+       "      <td>ben</td>\n",
+       "      <td>PIT</td>\n",
        "      <td>2023</td>\n",
-       "      <td>7</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2023_07_ARI_SEA</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.5</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_08_JAX_PIT</td>\n",
+       "      <td>JAX</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-2.5</td>\n",
+       "      <td>False</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>griffin</td>\n",
-       "      <td>SEA</td>\n",
+       "      <td>final</td>\n",
+       "      <td>DAL</td>\n",
        "      <td>2023</td>\n",
-       "      <td>7</td>\n",
+       "      <td>8</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>2023_07_ARI_SEA</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.5</td>\n",
+       "      <td>2023_08_LA_DAL</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>6.5</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>griffin</td>\n",
-       "      <td>SEA</td>\n",
+       "      <td>hunter</td>\n",
+       "      <td>DAL</td>\n",
        "      <td>2023</td>\n",
-       "      <td>7</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>8</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>2023_07_ARI_SEA</td>\n",
-       "      <td>ARI</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>9.5</td>\n",
        "      <td>False</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2023_08_LA_DAL</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>DAL</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -313,29 +313,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    picker pick  season  week  spread_pick  best_bet  underdog_pick  \\\n",
-       "0    final  SEA    2023     7         True      True          False   \n",
-       "1   hunter  SEA    2023     7         True     False          False   \n",
-       "2    harry  SEA    2023     7        False     False          False   \n",
-       "3  griffin  SEA    2023     7         True     False          False   \n",
-       "4  griffin  SEA    2023     7        False     False          False   \n",
+       "   picker pick  season  week  spread_pick  best_bet  underdog_pick  \\\n",
+       "0   final  PIT    2023     8         True     False          False   \n",
+       "1  hunter  PIT    2023     8         True     False          False   \n",
+       "2     ben  PIT    2023     8         True      True          False   \n",
+       "3   final  DAL    2023     8         True     False          False   \n",
+       "4  hunter  DAL    2023     8         True     False          False   \n",
        "\n",
        "   survivor_pick  mnf_pick          game_id away_team home_team  result  \\\n",
-       "0          False     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
-       "1          False     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
-       "2           True     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
-       "3          False     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
-       "4           True     False  2023_07_ARI_SEA       ARI       SEA    10.0   \n",
+       "0          False     False  2023_08_JAX_PIT       JAX       PIT   -10.0   \n",
+       "1          False     False  2023_08_JAX_PIT       JAX       PIT   -10.0   \n",
+       "2          False     False  2023_08_JAX_PIT       JAX       PIT   -10.0   \n",
+       "3          False     False   2023_08_LA_DAL        LA       DAL    23.0   \n",
+       "4          False     False   2023_08_LA_DAL        LA       DAL    23.0   \n",
        "\n",
        "   spread_line  away_pick  away_cover  home_cover  pick_result  \n",
-       "0          9.5      False           0           1          2.0  \n",
-       "1          9.5      False           0           1          1.0  \n",
-       "2          9.5      False           0           1          1.0  \n",
-       "3          9.5      False           0           1          1.0  \n",
-       "4          9.5      False           0           1          1.0  "
+       "0         -2.5      False         1.0         0.0          0.0  \n",
+       "1         -2.5      False         1.0         0.0          0.0  \n",
+       "2         -2.5      False         1.0         0.0          0.0  \n",
+       "3          6.5      False         0.0         1.0          1.0  \n",
+       "4          6.5      False         0.0         1.0          1.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,16 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2016, 18)"
+       "(2070, 18)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,16 +369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2070, 18)"
+       "(2115, 18)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
