homer analysis and eager chapter 1

--- a/notebooks/homers-data-processing.ipynb
+++ b/notebooks/homers-data-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "      <td>BB</td>\n",
        "      <td>BAL</td>\n",
        "      <td>HOU</td>\n",
-       "      <td></td>\n",
+       "      <td>TEN</td>\n",
        "      <td>ATL</td>\n",
        "      <td>PIT</td>\n",
        "      <td>SEA</td>\n",
@@ -90,7 +90,7 @@
        "      <td>1</td>\n",
        "      <td>PIT</td>\n",
        "      <td>DAL</td>\n",
-       "      <td></td>\n",
+       "      <td>CLE</td>\n",
        "      <td>CAR</td>\n",
        "      <td>CLE</td>\n",
        "      <td>PHI</td>\n",
@@ -100,7 +100,7 @@
        "      <td>2</td>\n",
        "      <td>CIN</td>\n",
        "      <td>PIT</td>\n",
-       "      <td></td>\n",
+       "      <td>JAX</td>\n",
        "      <td>MIA</td>\n",
        "      <td>CIN</td>\n",
        "      <td>DAL</td>\n",
@@ -110,7 +110,7 @@
        "      <td>3</td>\n",
        "      <td>DAL</td>\n",
        "      <td>GB</td>\n",
-       "      <td></td>\n",
+       "      <td>WAS</td>\n",
        "      <td>KC</td>\n",
        "      <td>CHI</td>\n",
        "      <td>CHI</td>\n",
@@ -120,7 +120,7 @@
        "      <td>4</td>\n",
        "      <td>HOU</td>\n",
        "      <td>BAL</td>\n",
-       "      <td></td>\n",
+       "      <td>DEN</td>\n",
        "      <td>CIN</td>\n",
        "      <td>HOU</td>\n",
        "      <td>NYJ</td>\n",
@@ -131,14 +131,14 @@
       ],
       "text/plain": [
        "  Pick  Team Hunter Harry Griffin  Ben Chuck\n",
-       "0   BB   BAL    HOU           ATL  PIT   SEA\n",
-       "1    1   PIT    DAL           CAR  CLE   PHI\n",
-       "2    2   CIN    PIT           MIA  CIN   DAL\n",
-       "3    3   DAL     GB            KC  CHI   CHI\n",
-       "4    4   HOU    BAL           CIN  HOU   NYJ"
+       "0   BB   BAL    HOU   TEN     ATL  PIT   SEA\n",
+       "1    1   PIT    DAL   CLE     CAR  CLE   PHI\n",
+       "2    2   CIN    PIT   JAX     MIA  CIN   DAL\n",
+       "3    3   DAL     GB   WAS      KC  CHI   CHI\n",
+       "4    4   HOU    BAL   DEN     CIN  HOU   NYJ"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(45, 18)\n"
+      "(54, 18)\n"
      ]
     },
     {
@@ -335,7 +335,7 @@
        "4          6.5      False         0.0         1.0          1.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,16 +348,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2070, 18)"
+       "(2115, 18)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,16 +369,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2115, 18)"
+       "(2124, 18)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
