--- a/notebooks/guess-the-lines.ipynb
+++ b/notebooks/guess-the-lines.ipynb
@@ -17,21 +17,25 @@
     "from src import utils\n",
     "from src import homers\n",
     "import plotly.express as px\n",
-    "from src.config import LOGO_PATH"
+    "from src.config import LOGO_PATH,  BETTING_PATH\n",
+    "\n",
+    "POWER_RATING_PATH = BETTING_PATH / 'power-ratings.pkl'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEASON, WEEK = 2023, 9"
+    "SEASON, WEEK = 2023, 9\n",
+    "HFA = 1.5\n",
+    "AVG_POINTS = 21.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +330,7 @@
        "31  ARI -6.1 -3.1 -3.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,6 +338,501 @@
    "source": [
     "power_df = pd.read_clipboard()\n",
     "power_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>ovr</th>\n",
+       "      <th>off</th>\n",
+       "      <th>def</th>\n",
+       "      <th>season</th>\n",
+       "      <th>week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PHI</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SF</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BAL</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MIA</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>-0.7</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  team  ovr  off  def  season  week\n",
+       "0   KC  6.5  4.1  2.4    2023     9\n",
+       "1  PHI  6.2  4.4  1.8    2023     9\n",
+       "2   SF  5.9  3.1  2.8    2023     9\n",
+       "3  BAL  5.1  2.5  2.6    2023     9\n",
+       "4  MIA  4.9  5.6 -0.7    2023     9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power_df['season']=SEASON\n",
+    "power_df['week']=WEEK\n",
+    "power_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "power_df.to_pickle(POWER_RATING_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pwr = pd.read_pickle(POWER_RATING_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sched = nfl.import_schedules([SEASON])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_team</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>game_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2023_09_TEN_PIT</th>\n",
+       "      <td>TEN</td>\n",
+       "      <td>PIT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023_09_MIA_KC</th>\n",
+       "      <td>MIA</td>\n",
+       "      <td>KC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023_09_MIN_ATL</th>\n",
+       "      <td>MIN</td>\n",
+       "      <td>ATL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023_09_SEA_BAL</th>\n",
+       "      <td>SEA</td>\n",
+       "      <td>BAL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023_09_ARI_CLE</th>\n",
+       "      <td>ARI</td>\n",
+       "      <td>CLE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                away_team home_team\n",
+       "game_id                            \n",
+       "2023_09_TEN_PIT       TEN       PIT\n",
+       "2023_09_MIA_KC        MIA        KC\n",
+       "2023_09_MIN_ATL       MIN       ATL\n",
+       "2023_09_SEA_BAL       SEA       BAL\n",
+       "2023_09_ARI_CLE       ARI       CLE"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sched = sched[sched['week']==WEEK][['game_id', 'away_team', 'home_team']].copy().set_index('game_id')\n",
+    "sched.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_home_score = lambda row: AVG_POINTS + row.home_off - row.away_def + HFA / 2\n",
+    "predict_away_score = lambda row: AVG_POINTS + row.away_off - row.home_def - HFA / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>spread</th>\n",
+       "      <th>total</th>\n",
+       "      <th>hfa</th>\n",
+       "      <th>pred_away_score</th>\n",
+       "      <th>pred_home_score</th>\n",
+       "      <th>away_ovr</th>\n",
+       "      <th>home_ovr</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TEN</td>\n",
+       "      <td>PIT</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>17.75</td>\n",
+       "      <td>20.05</td>\n",
+       "      <td>-2.3</td>\n",
+       "      <td>-1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MIA</td>\n",
+       "      <td>KC</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>23.95</td>\n",
+       "      <td>27.05</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>6.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MIN</td>\n",
+       "      <td>ATL</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>17.65</td>\n",
+       "      <td>21.65</td>\n",
+       "      <td>-3.4</td>\n",
+       "      <td>-0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SEA</td>\n",
+       "      <td>BAL</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>19.05</td>\n",
+       "      <td>24.25</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>5.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ARI</td>\n",
+       "      <td>CLE</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>36.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>14.35</td>\n",
+       "      <td>21.95</td>\n",
+       "      <td>-6.1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LA</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>42.9</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>21.65</td>\n",
+       "      <td>-2.3</td>\n",
+       "      <td>-3.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TB</td>\n",
+       "      <td>HOU</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>41.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>19.65</td>\n",
+       "      <td>22.15</td>\n",
+       "      <td>-2.6</td>\n",
+       "      <td>-1.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>38.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>18.95</td>\n",
+       "      <td>19.85</td>\n",
+       "      <td>-2.6</td>\n",
+       "      <td>-3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CHI</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>42.6</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>17.45</td>\n",
+       "      <td>25.15</td>\n",
+       "      <td>-5.4</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>CAR</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>23.95</td>\n",
+       "      <td>20.35</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>-5.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>NYG</td>\n",
+       "      <td>LV</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>17.85</td>\n",
+       "      <td>19.65</td>\n",
+       "      <td>-4.3</td>\n",
+       "      <td>-4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>DAL</td>\n",
+       "      <td>PHI</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>21.45</td>\n",
+       "      <td>24.35</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>6.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>BUF</td>\n",
+       "      <td>CIN</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>47.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>22.85</td>\n",
+       "      <td>24.95</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>LAC</td>\n",
+       "      <td>NYJ</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>38.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>20.05</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>-1.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   away_team home_team  spread  total  hfa  pred_away_score  pred_home_score  \\\n",
+       "0        TEN       PIT     2.3   37.8  1.5            17.75            20.05   \n",
+       "1        MIA        KC     3.1   51.0  1.5            23.95            27.05   \n",
+       "2        MIN       ATL     4.0   39.3  1.5            17.65            21.65   \n",
+       "3        SEA       BAL     5.2   43.3  1.5            19.05            24.25   \n",
+       "4        ARI       CLE     7.6   36.3  1.5            14.35            21.95   \n",
+       "5         LA        GB     0.4   42.9  1.5            21.25            21.65   \n",
+       "6         TB       HOU     2.5   41.8  1.5            19.65            22.15   \n",
+       "7        WAS        NE     0.9   38.8  1.5            18.95            19.85   \n",
+       "8        CHI        NO     7.7   42.6  1.5            17.45            25.15   \n",
+       "9        IND       CAR    -3.6   44.3  1.5            23.95            20.35   \n",
+       "10       NYG        LV     1.8   37.5  1.5            17.85            19.65   \n",
+       "11       DAL       PHI     2.9   45.8  1.5            21.45            24.35   \n",
+       "12       BUF       CIN     2.1   47.8  1.5            22.85            24.95   \n",
+       "13       LAC       NYJ    -1.3   38.8  1.5            20.05            18.75   \n",
+       "\n",
+       "    away_ovr  home_ovr  \n",
+       "0       -2.3      -1.5  \n",
+       "1        4.9       6.5  \n",
+       "2       -3.4      -0.9  \n",
+       "3        1.4       5.1  \n",
+       "4       -6.1       0.0  \n",
+       "5       -2.3      -3.4  \n",
+       "6       -2.6      -1.6  \n",
+       "7       -2.6      -3.2  \n",
+       "8       -5.4       0.8  \n",
+       "9       -0.5      -5.6  \n",
+       "10      -4.3      -4.0  \n",
+       "11       4.8       6.2  \n",
+       "12       4.1       4.7  \n",
+       "13       1.5      -1.3  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# guess the lines\n",
+    "gtl = pd.merge(sched, pwr[(pwr['week'] == WEEK) & (pwr['season']==SEASON)][['team', 'ovr', 'off', 'def']], left_on='away_team', right_on='team').drop(columns=['team']).rename(columns={'ovr': 'away_ovr', 'off': 'away_off', 'def': 'away_def'})\n",
+    "gtl = pd.merge(gtl, pwr[(pwr['week'] == WEEK) & (pwr['season']==SEASON)][['team', 'ovr', 'off', 'def']], left_on='home_team', right_on='team').drop(columns=['team']).rename(columns={'ovr': 'home_ovr', 'off': 'home_off', 'def': 'home_def'})\n",
+    "gtl['hfa'] = HFA\n",
+    "gtl['pred_away_score'] = gtl.apply(predict_away_score, axis=1)\n",
+    "gtl['pred_home_score'] = gtl.apply(predict_home_score, axis=1)\n",
+    "gtl['spread'] = gtl['pred_home_score'] - gtl['pred_away_score']\n",
+    "gtl['total'] = gtl['pred_home_score'] + gtl['pred_away_score']\n",
+    "gtl = gtl[['away_team', 'home_team', 'spread', 'total', 'hfa', 'pred_away_score', 'pred_home_score', 'away_ovr', 'home_ovr']].copy()\n",
+    "gtl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate Movement between Weeks"
    ]
   },
   {
@@ -639,6 +1138,7 @@
     }
    ],
    "source": [
+    "\n",
     "previous_power = pd.read_clipboard()\n",
     "previous_power"
    ]
