--- a/notebooks/guess-the-line-pipeline.ipynb
+++ b/notebooks/guess-the-line-pipeline.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gtl"
+    "schedule_df = nfl.import_schedules([2020])"
    ]
   },
   {
@@ -42,7 +42,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(schedule_df[\"home_score\"] - schedule_df[\"away_score\"]).abs().std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule_df[\"spread_line\"].abs().std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule_df[\"home_score\"].mean(), schedule_df[\"away_score\"].mean()"
+   ]
   },
   {
    "cell_type": "code",
