--- a/notebooks/ratings/epa-analysis.ipynb
+++ b/notebooks/ratings/epa-analysis.ipynb
@@ -12,6 +12,9 @@
     "\n",
     "import pandas as pd\n",
     "import nfl_data_py as nfl\n",
+    "from typing import Literal, Tuple\n",
+    "from src.modelling.metrics import success_rate_lambda\n",
+    "from src.visualisation.visualisation import plot_team_scatter\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)"
    ]
@@ -22,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbp = nfl.import_pbp_data(range(2016, 2024))"
+    "pbp = nfl.import_pbp_data(range(2022, 2024))"
    ]
   },
   {
@@ -82,6 +85,87 @@
     "pbp_r_neu.groupby([\"season\", \"posteam\"]).agg({\"epa\": \"mean\"}).sort_values(\n",
     "    by=\"epa\", ascending=False\n",
     ").rename(columns={\"epa\": \"epa_per_rush\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_epa_metrics(\n",
+    "    data: pd.DataFrame, team: Literal[\"posteam\", \"defteam\"] = \"posteam\"\n",
+    ") -> pd.DataFrame:\n",
+    "    sort_ascending = team == \"defteam\"\n",
+    "    df = data.copy()\n",
+    "    df[\"success\"] = df[\"epa\"].apply(success_rate_lambda)\n",
+    "    epa_df = (\n",
+    "        df.groupby(team)\n",
+    "        .agg({team: \"count\", \"epa\": \"mean\", \"success\": \"mean\"})\n",
+    "        .sort_values(by=\"epa\", ascending=False)\n",
+    "        .rename(columns={team: \"n\", \"success\": \"success_rate\"})\n",
+    "    )\n",
+    "    for col in [\"epa\", \"success_rate\"]:\n",
+    "        epa_df[f\"{col}_rank\"] = epa_df[col].rank(ascending=sort_ascending).astype(int)\n",
+    "        epa_df[f\"{col}_percentile\"] = (\n",
+    "            epa_df[col].rank(ascending=(not sort_ascending), pct=True).round(2) * 10\n",
+    "        )\n",
+    "    epa_df[\"epa\"] = epa_df[\"epa\"].round(3)\n",
+    "    epa_df[\"success_rate\"] = epa_df[\"success_rate\"].round(2)\n",
+    "    col_list = list(epa_df.columns)\n",
+    "    col_list.remove(\"n\")\n",
+    "    col_list = list(sorted(col_list))\n",
+    "    col_list.insert(0, \"n\")\n",
+    "    return epa_df[col_list].sort_values(\"epa_rank\")\n",
+    "\n",
+    "\n",
+    "def dual_epa_metrics(data: pd.DataFrame) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
+    "    return calculate_epa_metrics(data), calculate_epa_metrics(data, \"defteam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "off_rush_epa_df, def_rush_epa_df = dual_epa_metrics(pbp_r_neu.query(\"season==2023\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "off_rush_epa_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_team_scatter(off_rush_epa_df, \"success_rate\", \"epa\", alpha=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def_rush_epa_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_team_scatter(def_rush_epa_df, \"success_rate\", \"epa\", flip_def=True, alpha=0.9)"
    ]
   },
   {
