add plot_bar() in visualisation module

--- a/notebooks/fantasy/reciever_metrics.ipynb
+++ b/notebooks/fantasy/reciever_metrics.ipynb
@@ -9,12 +9,11 @@
     "import jupyter_black\n",
     "\n",
     "jupyter_black.load()\n",
-    "\n",
     "import pandas as pd\n",
     "import nfl_data_py as nfl\n",
-    "from typing import Literal, Tuple\n",
-    "from src.modelling.metrics import success_rate_lambda\n",
-    "from src.visualisation.visualisation import plot_team_scatter\n",
+    "from src.visualisation.visualisation import plot_bar\n",
+    "from src.visualisation import colors\n",
+    "import plotly.express as px\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)"
    ]
@@ -35,7 +34,8 @@
    "outputs": [],
    "source": [
     "# offense_players - list of id's\n",
-    "id_df = nfl.import_ids()"
+    "id_df = nfl.import_ids()\n",
+    "id_df.sample(4)"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbp = pbp.query(\"week<=18\")"
+    "pbp = pbp.query(\"week<=18\").query('play_type==\"pass\" or play_type==\"run\"')"
    ]
   },
   {
@@ -73,21 +73,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_df.sample(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pbp_player = (\n",
     "    pbp.explode(\"offense_players_list\")\n",
     "    .dropna(subset=[\"offense_players_list\"])\n",
     "    .rename(columns={\"offense_players_list\": \"player_id\"})\n",
-    "    .query('player_id!=\"\"')\n",
-    "    .query('play_type==\"pass\" or play_type==\"run\"')\n",
+    "    # .query('player_id!=\"\"')\n",
     "    .merge(\n",
     "        id_df[[\"gsis_id\", \"position\", \"name\"]],\n",
     "        how=\"left\",\n",
@@ -96,6 +86,15 @@
     "    )\n",
     "    .drop(columns=[\"gsis_id\"])\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbp_player.sample(8)"
    ]
   },
   {
@@ -125,8 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 00-0030279 keenan\n",
-    "# 00-0036963 arsb"
+    "arsb = pbp_wr.query(\"player_id=='00-0036963'\")"
    ]
   },
   {
@@ -135,7 +133,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arsb = pbp_wr.query(\"player_id=='00-0036963'\")"
+    "# 00-0030279 keenan\n",
+    "# 00-0036963 arsb"
    ]
   },
   {
@@ -162,8 +161,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arsb_yrr = (\n",
-    "    arsb.groupby(\"player_id\")\n",
+    "yrr_df = (\n",
+    "    pbp_wr.groupby([\"player_id\", \"name_y\", \"posteam\"])\n",
     "    .agg(\n",
     "        {\n",
     "            \"play_id\": \"count\",\n",
@@ -184,8 +183,9 @@
     "    )\n",
     "    .astype(int)\n",
     ")\n",
-    "arsb_yrr[\"yrr\"] = (arsb_yrr[\"yds\"] / arsb_yrr[\"routes\"]).round(3)\n",
-    "arsb_yrr"
+    "yrr_df[\"yrr\"] = (yrr_df[\"yds\"] / yrr_df[\"routes\"]).round(3)\n",
+    "yrr_df = yrr_df.query(\"routes>50\").sort_values(\"yrr\", ascending=False)\n",
+    "yrr_df.head(25)"
    ]
   },
   {
@@ -194,7 +194,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# these are snaps he was on the field for, i also need team totals"
+    "yrr_plot = (\n",
+    "    yrr_df.reset_index()\n",
+    "    .head(20)[[\"name_y\", \"posteam\", \"yrr\"]]\n",
+    "    .rename(columns={\"name_y\": \"player\", \"posteam\": \"team\"})\n",
+    "    .sort_values(\"yrr\", ascending=True)\n",
+    ")\n",
+    "yrr_plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_bar(yrr_plot.head(20), x=\"yrr\", y=\"player\", dark_mode=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(\n",
+    "    yrr_plot,\n",
+    "    x=\"yrr\",\n",
+    "    y=\"player\",\n",
+    "    orientation=\"h\",\n",
+    "    color=\"team\",\n",
+    "    color_discrete_map=colors.team_unique_colors,\n",
+    "    opacity=0.85,\n",
+    ")\n",
+    "# Iterate through the data and add logos to the chart\n",
+    "for index, row in yrr_plot.iterrows():\n",
+    "    scale = 1.25\n",
+    "    fig.add_layout_image(\n",
+    "        dict(\n",
+    "            source=f\"https://a.espncdn.com/i/teamlogos/nfl/500/{row['team']}.png\",\n",
+    "            x=row[\"yrr\"],  # Adjust the position\n",
+    "            y=row[\"player\"],\n",
+    "            xref=\"x\",\n",
+    "            yref=\"y\",\n",
+    "            sizex=scale,  # Adjust the size\n",
+    "            sizey=scale,  # Adjust the size\n",
+    "            sizing=\"contain\",\n",
+    "            opacity=1,\n",
+    "            xanchor=\"center\",\n",
+    "            yanchor=\"middle\",\n",
+    "        )\n",
+    "    )\n",
+    "fig.update_yaxes(categoryorder=\"total ascending\")\n",
+    "MARGIN = 100\n",
+    "fig.update_layout(\n",
+    "    height=800,\n",
+    "    width=700,\n",
+    "    template=\"plotly_dark\",\n",
+    "    # template=\"plotly_white\",\n",
+    "    xaxis_title=f\"Yards per Route Run\",\n",
+    "    yaxis_title=\"\",\n",
+    "    title=f\"2023 Yards per Route Run\",\n",
+    "    title_x=0.5,  # Centers the title horizontally\n",
+    "    annotations=[\n",
+    "        dict(\n",
+    "            text=\"Data: @nflfastR | Chart: @griffreichert\",\n",
+    "            x=-0.25,  # centered\n",
+    "            y=-0.1,  # position above\n",
+    "            xref=\"paper\",\n",
+    "            yref=\"paper\",\n",
+    "            showarrow=False,\n",
+    "            xanchor=\"left\",\n",
+    "            yanchor=\"top\",\n",
+    "            font=dict(size=12),\n",
+    "        )\n",
+    "    ],\n",
+    "    margin=dict(\n",
+    "        t=MARGIN, b=MARGIN, l=MARGIN, r=MARGIN\n",
+    "    ),  # Adjust top and bottom margin to make space for the title and the note\n",
+    ")\n",
+    "fig.update_traces(showlegend=False)\n",
+    "# Show the chart\n",
+    "fig.show()"
    ]
   },
   {
